--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<section id="one">
 						<p style="color:#000000">Hi! I am David García-Méndez, PhD Candidate in Finance at Universidad Carlos III de Madrid (UC3M). <br> 
-							My research areas are Market Microstructure  and Information Economics. More especifically,
+							My research areas are Market Microstructure and Information Economics. More specifically,
 							I am focused on information acquisition in OTC markets.
 						</p>
 
