--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
 
 				<section id="one">
 						<p style="color:#000000">Hi! I am David García-Méndez, PhD Candidate in Finance at Universidad Carlos III de Madrid (UC3M). <br> 
-							My research areas are Market Microstructure and Information Economics. More specifically,
-							I am focused on information acquisition in OTC markets.
+							My research areas are Market Microstructure  and Information Economics. More specifically,
+							I am focused now on information acquisition in OTC markets.
+						</p>
+
+						<p style="color:#000000"> Get in touch at <a href="dgmendez@emp.uc3m.es" style="color: #ff0303;"><span class="label">dgmendez@emp.uc3m.es</span></a>!
 						</p>
 
 				<hr>
 
 				<section id="two">
 					<h2>Education</h2>
-					<p style="color:#000000"> You can download my detailed CV <a href="http://html5up.net" style="color: #229954;">here</a>.</p>
+					<p style="color:#000000"> You can download my detailed CV <a href="https://drive.google.com/file/d/1hJ9IvuipZjyynGZgsOeI4TdAfvjd4-dd/view?usp=sharing" target="_blank" style="color: #ff0303;">here</a>.</p>
 
 					<p style="color:#000000" > 
-						PhD in Finance<strong>, Universidad Carlos III de Madrid (Advisor: Jesper Rüdiger). 2023-date.</strong> <br>
+						PhD in Finance<strong>, Universidad Carlos III de Madrid (Advisor: Jesper Rüdiger). 2022-date.</strong> <br>
 					    MRes in Business and Finance<strong>, Finance Track (with honors), Universidad Carlos III de Madrid. 2020-2022.</strong> <br>
 					    Bachelor in Business Administration <strong>(with honors), Universidad de Salamanca. 2014-2020.</strong> <br> 
 					    Bachelor in Law <strong>(with honors), Universidad de Salamanca. 2014-2020. </strong></p>
@@ -49,13 +52,13 @@
 						<h2>Working Papers</h2>
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3 style="color:#000000">Does Internalization Increase Information Acquisition? (2023) <a href="http://html5up.net" style="color: #229954;">Latest Version</a>.</h3>
+								<h3 style="color:#000000">Does Internalization Increase Information Acquisition? (2023) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4629902" target="_blank" style="color: #ff0303;">Latest Version</a>.</h3>
 								<p > Abstract: Order flow internalization by wholesalers has increased in the last decade. Retail orders internalization decreases liquidity in lit exchanges, but 
 									it may also favor off-exchange liquidity provision to sophisticated investors. Information acquisition determines price informativeness and market efficiency,
 									 and whether internalization encourages or discourages the acquisition of information by market participants is an open question. We measure short and long term
 									  information acquisition finding that the proportion of internalized volume is positively associated with information acquisition at both horizons. We test our 
 									  mechanism showing that the effect of internalization on information acquisition is stronger for those stocks preferred by institutional investors and by 
-									  uninformed traders.</p>
+									  uninformed traders proxied by Robinhood users holdings.</p>
 							</article>
 					</section>
 				
