--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<div id="main" style="background-color:#FFFFFF">
 
 				<section id="one">
-						<p style="color:#000000">Hi! I am David García-Méndez, PhD Candidate in Finance at Universidad Carlos III de Madrid (UC3M). <br> 
+						<p style="color:#000000" align="justify" >Hi! I am David García-Méndez, PhD Candidate in Finance at Universidad Carlos III de Madrid (UC3M). 
 							My research areas are Market Microstructure  and Information Economics. More specifically,
-							I am focused now on information acquisition in OTC markets.
+							I am interested in information acquisition in OTC markets and dealers networks.
 						</p>
 
 						<p style="color:#000000"> Get in touch at <a href="dgmendez@emp.uc3m.es" style="color: #ff0303;"><span class="label">dgmendez@emp.uc3m.es</span></a>!
@@ -53,7 +53,7 @@
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 style="color:#000000">Does Internalization Increase Information Acquisition? (2023) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4629902" target="_blank" style="color: #ff0303;">Latest Version</a>.</h3>
-								<p > Abstract: Order flow internalization by wholesalers has increased in the last decade. Retail orders internalization decreases liquidity in lit exchanges, but 
+								<p align="justify" > Abstract: Order flow internalization by wholesalers has increased in the last decade. Retail orders internalization decreases liquidity in lit exchanges, but 
 									it may also favor off-exchange liquidity provision to sophisticated investors. Information acquisition determines price informativeness and market efficiency,
 									 and whether internalization encourages or discourages the acquisition of information by market participants is an open question. We measure short and long term
 									  information acquisition finding that the proportion of internalized volume is positively associated with information acquisition at both horizons. We test our 
@@ -101,6 +101,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
+						<li><a href="https://es.linkedin.com/in/david-garc%C3%ADa-m%C3%A9ndez-0908b711b" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="dgmendez@emp.uc3m.es" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
