--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://es.linkedin.com/in/david-garc%C3%ADa-m%C3%A9ndez-0908b711b" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://es.linkedin.com/in/david-garc%C3%ADa-m%C3%A9ndez-0908b711b" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="dgmendez@emp.uc3m.es" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
