--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 			<header id="header" >
 				<div class="inner" >
 					<a class="image"><img src="images/avatar.jpg" alt="" width="250" height="265"/></a>
-					<h1><strong>David García-Méndez</strong> <br>
-				    PhD Candidate in Finance <br>
-					Universidad Carlos III de Madrid</a></h1>
+					<a class="image"><img src="images/avatar.jpg" alt="" width="250" height="265"/></a>
+					<h1><strong>David García-Méndez</strong> <br></h1>
+				        <h1>PhD Candidate in Finance <br></h1>
+					<h1>Universidad Carlos III de Madrid</a></h1>
 				</div>
 			</header>
 
