--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							I am interested in information acquisition in OTC markets and dealers networks.
 						</p>
 
-						<p style="color:#000000"> Get in touch at <a href="dgmendez@emp.uc3m.es" style="color: #ff0303;"><span class="label">dgmendez@emp.uc3m.es</span></a>!
+						<p style="color:#000000"> Get in touch at <a href="mailto:dgmendez@emp.uc3m.es" style="color: #ff0303;"><span class="label">dgmendez@emp.uc3m.es</span></a>!
 						</p>
 
 				<hr>
@@ -88,7 +88,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="dgmendez@emp.uc3m.es">dgmendez@emp.uc3m.es</a>
+										<a href="mailto:dgmendez@emp.uc3m.es">dgmendez@emp.uc3m.es</a>
 									</li>
 								</ul>
 							</div>
@@ -102,7 +102,7 @@
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://es.linkedin.com/in/david-garc%C3%ADa-m%C3%A9ndez-0908b711b" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="dgmendez@emp.uc3m.es" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:dgmendez@emp.uc3m.es" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; David García-Méndez, 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
