--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 				
 					<section id="three">
 						<h2>Working Papers</h2>
+       						
+						<p style="color:#000000"> You can check my Google Scholar profile <a href="https://scholar.google.es/citations?user=7FxGmfsAAAAJ&hl=es&authuser=2" target="_blank" style="color: #ff0303;">here</a>.</p>
+
 						<div class="column">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 style="color:#000000">Does Internalization Increase Information Acquisition? (2023) <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4629902" target="_blank" style="color: #ff0303;">Latest Version</a>.</h3>
@@ -103,6 +106,7 @@
 					<ul class="icons">
 						<li><a href="https://es.linkedin.com/in/david-garc%C3%ADa-m%C3%A9ndez-0908b711b" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto:dgmendez@emp.uc3m.es" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					        <li><a href="https://scholar.google.es/citations?user=7FxGmfsAAAAJ&hl=es&authuser=2" class="icon solid fa-graduation-cap"><span class="label">Scholar</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; David García-Méndez, 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
