--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					        <li><a href="https://scholar.google.es/citations?user=7FxGmfsAAAAJ&hl=es&authuser=2" class="icon solid fa-graduation-cap"><span class="label">Scholar</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; David García-Méndez, 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; David García Méndez, 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
